fix: restructure feature panel layout for improved readability and organization

--- a/test_Maite.css
+++ b/test_Maite.css
@@ -690,20 +690,26 @@ input {
     margin: 0;
   }
 
-  .feature-panel h3 {
+ .feature-panel-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     grid-column: 2;
+    grid-row: 1 / span 2;
+  }
+
+  .feature-panel-content h3 {
+    margin-bottom: var(--space-4);
     text-align: left;
-    margin: 0;
     font-size: var(--font-size-xl);
     line-height: var(--line-height-lg);
   }
 
-  .feature-panel p {
-    grid-column: 2;
+  .feature-panel-content p {
+    margin: 0;
     font-size: var(--font-size-xs);
     line-height: var(--line-height-sm);
-    max-width: none;
-    margin: 0;
   }
 
   /* Desktop Pricing */
